--- a/env.example
+++ b/env.example
@@ -1,13 +1,35 @@
 # Database Configuration
 DB_PASSWORD=your-supabase-database-password
 
-# OpenWeatherMap API
+# OpenWeatherMap API - Get your key from https://openweathermap.org/api
 WEATHER_API_KEY=your-openweathermap-api-key
 
-# Twilio SMS Configuration
+# Twilio SMS Configuration - Get credentials from https://console.twilio.com/
 TWILIO_ACCOUNT_SID=your-twilio-account-sid
 TWILIO_AUTH_TOKEN=your-twilio-auth-token
 TWILIO_PHONE_NUMBER=+1234567890
+
+# JWT Configuration - Generate a secure random string (minimum 256 bits)
+JWT_SECRET=your-super-secure-jwt-secret-key-minimum-256-bits
+
+# Google OAuth2 Configuration - Get from Google Cloud Console
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Gemini AI API - Get from Google AI Studio
+GEMINI_API_KEY=your-gemini-api-key
+
+# Email Configuration - Use app-specific password for Gmail
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+
+# Frontend URL
+FRONTEND_URL=https://your-frontend-domain.vercel.app
+
+# Admin Configuration
+ADMIN_PASSWORD=your-secure-admin-password
 
 # Optional: Override default settings
 SERVER_PORT=8080
