--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ server.port=9090
 server.servlet.context-path=/api
 
 # Database Configuration - Supabase PostgreSQL
-spring.datasource.url=jdbc:postgresql://aws-1-eu-north-1.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://aws-1-eu-north-1.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0}
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=postgres.hlhnquynjylsxojferjc
-spring.datasource.password=Nazarboy2005
+spring.datasource.username=${DB_USERNAME:postgres.hlhnquynjylsxojferjc}
+spring.datasource.password=${DB_PASSWORD:your-database-password}
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.h2.console.enabled=false
 
 # External API Configuration
-app.weather.api.key=${WEATHER_API_KEY:5d43153239d679121f3c35bbb08ca0bb}
+app.weather.api.key=${WEATHER_API_KEY:your-openweathermap-api-key}
 app.weather.api.url=https://api.openweathermap.org/data/3.0/onecall
 app.nasa.api.url=https://power.larc.nasa.gov/api/temporal/daily/point
 
@@ -49,8 +49,8 @@ management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
 # Google OAuth2 Configuration
-spring.security.oauth2.client.registration.google.client-id=1077945709935-l5tcsn6el2b1rqh51l229aja2klio170.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:your-google-client-id}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:your-google-client-secret}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:9090/api/oauth2/callback/google
 
