--- a/env.example
+++ b/env.example
@@ -19,6 +19,9 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 # Gemini AI API - Get from Google AI Studio
 GEMINI_API_KEY=your-gemini-api-key
 
+# Plant.id API - Get from https://plant.id/ (comma-separated for multiple keys)
+PLANTID_API_KEYS=your-plantid-api-key-1,your-plantid-api-key-2
+
 # Email Configuration - Use app-specific password for Gmail
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
@@ -34,3 +37,4 @@ ADMIN_PASSWORD=your-secure-admin-password
 # Optional: Override default settings
 SERVER_PORT=8080
 SPRING_PROFILES_ACTIVE=production
+
