--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["mvn clean install -DskipTests"]
 cmds = ["mvn clean package -DskipTests"]
 
 [start]
-cmd = "java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar"
+cmd = "java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar --server.port=$PORT"
