--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["mvn clean install -DskipTests"]
 cmds = ["mvn clean package -DskipTests"]
 
 [start]
-cmd = "if [ -f target/agriculture-backend-0.0.1-SNAPSHOT.jar ]; then java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar --server.port=$PORT; else echo 'JAR file not found, building...'; mvn clean package -DskipTests && java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar --server.port=$PORT; fi"
+cmd = "chmod +x startup.sh && ./startup.sh"
