--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["maven", "openjdk17"]
 cmds = ["mvn clean install -DskipTests"]
 
 [phases.build]
-cmds = ["mvn clean package -DskipTests"]
+cmds = ["mvn clean package -DskipTests", "ls -la target/", "find target/ -name '*.jar' -type f"]
 
 [start]
-cmd = "chmod +x startup.sh && ./startup.sh"
+cmd = "sh -c 'if [ -f target/agriculture-backend-0.0.1-SNAPSHOT.jar ]; then java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar --server.port=$PORT; else echo \"JAR not found, building...\"; mvn clean package -DskipTests && java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar --server.port=$PORT; fi'"
