--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["maven", "openjdk17"]
 cmds = ["mvn clean install -DskipTests"]
 
 [phases.build]
-cmds = ["mvn clean package -DskipTests", "ls -la target/", "find target/ -name '*.jar' -type f"]
+cmds = ["mvn clean package -DskipTests", "echo 'Build completed, checking JAR file...'", "ls -la target/", "find target/ -name '*.jar' -type f", "if [ ! -f target/agriculture-backend-0.0.1-SNAPSHOT.jar ]; then echo 'ERROR: JAR file not created!'; exit 1; else echo 'SUCCESS: JAR file created successfully'; fi"]
 
 [start]
-cmd = "sh -c 'if [ -f target/agriculture-backend-0.0.1-SNAPSHOT.jar ]; then java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar --server.port=$PORT; else echo \"JAR not found, building...\"; mvn clean package -DskipTests && java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar --server.port=$PORT; fi'"
+cmd = "java -jar target/agriculture-backend-0.0.1-SNAPSHOT.jar --server.port=$PORT"
