--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=agriculture-backend
 
 # Server Configuration
-server.port=9090
+server.port=${PORT:9090}
 server.servlet.context-path=/api
 
 # Database Configuration - Supabase PostgreSQL (Production)
