--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 # Application Configuration
 spring.application.name=agriculture-backend
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 # Server Configuration
 server.port=${PORT:9090}
 server.servlet.context-path=/api
 
-# Database Configuration - Supabase PostgreSQL (Production)
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://aws-1-eu-north-1.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0}
+# Database Configuration - Environment-based
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/agriculture_db}
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME:postgres.hlhnquynjylsxojferjc}
-spring.datasource.password=${DB_PASSWORD:Nazarboy2005}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:password}
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
