--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,11 @@
-# Production Database Configuration
+# Production Database Configuration - Supabase
 # This file is used when SPRING_PROFILES_ACTIVE=prod
 
-# Database Configuration - Production
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/agriculture_db}
+# Database Configuration - Supabase PostgreSQL
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://aws-1-eu-north-1.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0}
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.username=${DB_USERNAME:postgres.hlhnquynjylsxojferjc}
+spring.datasource.password=${DB_PASSWORD:Nazarboy2005}
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
