--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,17 +14,35 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-# Connection Pool Configuration
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
+# Connection Pool Configuration - Optimized for Supabase Free Tier
+spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.minimum-idle=0
 spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1200000
-spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.auto-commit=true
 
 # Logging Configuration
 logging.level.com.hackathon.agriculture_backend=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=WARN
+
+# Email Configuration - Disable email in production to prevent SMTP timeouts
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+app.email.enabled=false
+
+# Health Configuration - Exclude mail health indicator to prevent SMTP timeouts
+management.health.mail.enabled=false
+management.health.defaults.enabled=true
+management.health.diskspace.enabled=true
+management.health.db.enabled=true
+management.health.ping.enabled=true
 
 # Security Configuration
 management.endpoints.web.exposure.include=health,info
