--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -30,19 +30,25 @@ logging.level.com.hackathon.agriculture_backend=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=WARN
 
-# Email Configuration - Disable email in production to prevent SMTP timeouts
+# Email Configuration - Completely disable email in production to prevent SMTP timeouts
 spring.mail.host=
 spring.mail.port=
 spring.mail.username=
 spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
 app.email.enabled=false
 
-# Health Configuration - Exclude mail health indicator to prevent SMTP timeouts
+# Health Configuration - Completely disable mail health indicator
 management.health.mail.enabled=false
 management.health.defaults.enabled=true
 management.health.diskspace.enabled=true
 management.health.db.enabled=true
 management.health.ping.enabled=true
+
+# Disable mail auto-configuration completely
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration
 
 # Security Configuration
 management.endpoints.web.exposure.include=health,info
