--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -48,8 +48,11 @@ management.health.db.enabled=true
 management.health.ping.enabled=true
 
 # Disable mail auto-configuration completely
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mail.MailSenderAutoConfiguration
 
 # Security Configuration
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
+
+# Frontend URL Configuration
+app.frontend.url=https://agriculture-frontend-btleirx65.vercel.app
