--- a/src/main/resources/application-security.properties
+++ b/src/main/resources/application-security.properties
@@ -15,12 +15,12 @@ spring.security.headers.frame-options=DENY
 spring.security.headers.content-type-options=nosniff
 spring.security.headers.xss-protection=1; mode=block
 
-# CORS Configuration
-spring.web.cors.allowed-origins=${FRONTEND_URL:https://your-frontend-domain.vercel.app}
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-spring.web.cors.max-age=3600
+# CORS Configuration - Disabled here to use programmatic configuration in SecurityConfig
+# spring.web.cors.allowed-origins=${FRONTEND_URL:https://agriculture-frontend-two.vercel.app}
+# spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+# spring.web.cors.allowed-headers=*
+# spring.web.cors.allow-credentials=true
+# spring.web.cors.max-age=3600
 
 # Rate Limiting (if using Spring Cloud Gateway)
 # spring.cloud.gateway.filter.request-rate-limiter.enabled=true
