Force CORS override for Railway - add ForceCorsFilter and production config

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -56,3 +56,15 @@ management.endpoint.health.show-details=when-authorized
 
 # Frontend URL Configuration
 app.frontend.url=https://agriculture-frontend-two.vercel.app
+
+# Railway CORS Override - Force disable Railway's automatic CORS
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.same-site=none
+server.forward-headers-strategy=none
+
+# Disable Railway's automatic CORS injection
+spring.web.cors.allowed-origins=https://agriculture-frontend-two.vercel.app
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
