--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -68,3 +68,6 @@ spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 spring.web.cors.max-age=3600
+
+# Allow bean overriding to prevent conflicts
+spring.main.allow-bean-definition-overriding=true
