--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -62,12 +62,16 @@ server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.same-site=none
 server.forward-headers-strategy=none
 
-# Disable Railway's automatic CORS injection
-spring.web.cors.allowed-origins=https://agriculture-frontend-two.vercel.app
+# Disable Railway's automatic CORS injection completely
+spring.web.cors.allowed-origins=https://agriculture-frontend-two.vercel.app,https://agriculture-frontend.vercel.app,https://agriculture-frontend-btleirx65.vercel.app
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 spring.web.cors.max-age=3600
+
+# Force override Railway's platform CORS
+server.servlet.context-path=/api
+server.port=9090
 
 # Allow bean overriding to prevent conflicts
 spring.main.allow-bean-definition-overriding=true
