--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -73,5 +73,14 @@ spring.web.cors.max-age=3600
 server.servlet.context-path=/api
 server.port=9090
 
+# Disable Railway's automatic CORS completely
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.same-site=none
+server.forward-headers-strategy=none
+
+# Force Spring Boot to handle CORS instead of Railway
+spring.web.cors.enabled=true
+spring.web.cors.allow-credentials=true
+
 # Allow bean overriding to prevent conflicts
 spring.main.allow-bean-definition-overriding=true
