--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["maven", "openjdk17"]
 cmds = ["mvn clean install -DskipTests"]
 
 [phases.build]
-cmds = ["mvn clean package -DskipTests", "echo 'Build completed, checking JAR file...'", "pwd", "ls -la", "ls -la target/", "find . -name '*.jar' -type f", "echo 'Checking for agriculture-backend JAR...'", "if [ -f target/agriculture-backend-0.0.1-SNAPSHOT.jar ]; then echo 'SUCCESS: JAR file found at target/agriculture-backend-0.0.1-SNAPSHOT.jar'; ls -la target/agriculture-backend-0.0.1-SNAPSHOT.jar; else echo 'ERROR: JAR file not found at expected location!'; echo 'Available JAR files:'; find . -name '*.jar' -type f; exit 1; fi"]
+cmds = ["mvn clean package -DskipTests", "echo 'Build completed, checking JAR file...'", "pwd", "ls -la", "ls -la target/", "find . -name '*.jar' -type f", "echo 'Checking for app JAR...'", "if [ -f target/app.jar ]; then echo 'SUCCESS: JAR file found at target/app.jar'; ls -la target/app.jar; else echo 'ERROR: JAR file not found at expected location!'; echo 'Available JAR files:'; find . -name '*.jar' -type f; exit 1; fi"]
 
 [start]
 cmd = "java -jar app.jar"
