--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -82,5 +82,21 @@ server.forward-headers-strategy=none
 spring.web.cors.enabled=true
 spring.web.cors.allow-credentials=true
 
+# NUCLEAR CORS OPTIONS - Override Railway completely
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.same-site=none
+server.forward-headers-strategy=none
+
+# Disable Railway's platform-level CORS injection
+spring.web.cors.enabled=true
+spring.web.cors.allow-credentials=true
+
+# Force CORS headers to be set by application
+spring.web.cors.allowed-origins=https://agriculture-frontend-two.vercel.app,https://agriculture-frontend.vercel.app,https://agriculture-frontend-btleirx65.vercel.app
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
+
 # Allow bean overriding to prevent conflicts
 spring.main.allow-bean-definition-overriding=true
