--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -98,5 +98,12 @@ spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 spring.web.cors.max-age=3600
 
+# CORS Configuration
+cors.allowedOrigins=https://agriculture-frontend-two.vercel.app
+cors.allowedMethods=GET,POST,PUT,DELETE,OPTIONS
+cors.allowedHeaders=*
+cors.allowCredentials=true
+cors.maxAge=3600
+
 # Allow bean overriding to prevent conflicts
 spring.main.allow-bean-definition-overriding=true
