--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,3 +91,10 @@ app.token.password-reset.expiry=1
 plantid.api-keys=${PLANTID_API_KEYS:k081ANqnIHItmqlh58hu0WXqPNtDD6jkEbkm3AcRBDQ2LAxe2Y}
 plantid.endpoint=https://api.plant.id/v3/health_assessment
 plantid.timeout=30000
+
+# CORS Configuration
+cors.allowedOrigins=https://agriculture-frontend-two.vercel.app
+cors.allowedMethods=GET,POST,PUT,DELETE,OPTIONS
+cors.allowedHeaders=*
+cors.allowCredentials=true
+cors.maxAge=3600
