--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -62,48 +62,13 @@ server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.same-site=none
 server.forward-headers-strategy=none
 
-# Disable Railway's automatic CORS injection completely
-spring.web.cors.allowed-origins=https://agriculture-frontend-two.vercel.app,https://agriculture-frontend.vercel.app,https://agriculture-frontend-btleirx65.vercel.app
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-spring.web.cors.max-age=3600
-
 # Force override Railway's platform CORS
 server.servlet.context-path=/api
 server.port=9090
 
-# Disable Railway's automatic CORS completely
-server.servlet.session.cookie.secure=false
-server.servlet.session.cookie.same-site=none
-server.forward-headers-strategy=none
-
-# Force Spring Boot to handle CORS instead of Railway
-spring.web.cors.enabled=true
-spring.web.cors.allow-credentials=true
-
-# NUCLEAR CORS OPTIONS - Override Railway completely
-server.servlet.session.cookie.secure=false
-server.servlet.session.cookie.same-site=none
-server.forward-headers-strategy=none
-
-# Disable Railway's platform-level CORS injection
-spring.web.cors.enabled=true
-spring.web.cors.allow-credentials=true
-
-# Force CORS headers to be set by application
-spring.web.cors.allowed-origins=https://agriculture-frontend-two.vercel.app,https://agriculture-frontend.vercel.app,https://agriculture-frontend-btleirx65.vercel.app
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-spring.web.cors.max-age=3600
-
-# CORS Configuration
-cors.allowedOrigins=https://agriculture-frontend-two.vercel.app
-cors.allowedMethods=GET,POST,PUT,DELETE,OPTIONS
-cors.allowedHeaders=*
-cors.allowCredentials=true
-cors.maxAge=3600
+# Disable Railway's automatic CORS injection completely
+# Let CustomCorsFilter handle CORS with highest precedence
+spring.web.cors.enabled=false
 
 # Allow bean overriding to prevent conflicts
 spring.main.allow-bean-definition-overriding=true
