--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,15 +15,19 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Connection Pool Configuration - Optimized for Supabase Free Tier
-spring.datasource.hikari.maximum-pool-size=1
+# Supabase free tier allows max 60 connections, but we'll be conservative
+spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.hikari.minimum-idle=0
-spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.idle-timeout=120000
 spring.datasource.hikari.max-lifetime=300000
-spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.leak-detection-threshold=60000
-spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.auto-commit=true
+# Additional settings to prevent connection leaks
+spring.datasource.hikari.keep-alive-time=30000
+spring.datasource.hikari.register-mbeans=true
 
 # Logging Configuration
 logging.level.com.hackathon.agriculture_backend=INFO
