--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -61,7 +61,7 @@ management.endpoint.health.show-details=when-authorized
 # Frontend URL Configuration
 app.frontend.url=https://agriculture-frontend-two.vercel.app
 
-# Railway CORS Override - Force disable Railway's automatic CORS
+# NUCLEAR CORS OVERRIDE - Force disable Railway's automatic CORS
 server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.same-site=none
 server.forward-headers-strategy=none
@@ -70,9 +70,20 @@ server.forward-headers-strategy=none
 server.servlet.context-path=/api
 server.port=9090
 
-# Disable Railway's automatic CORS injection completely
-# Let CustomCorsFilter handle CORS with highest precedence
+# NUCLEAR: Completely disable Spring's CORS handling
 spring.web.cors.enabled=false
+spring.web.cors.allowed-origins=
+spring.web.cors.allowed-methods=
+spring.web.cors.allowed-headers=
 
 # Allow bean overriding to prevent conflicts
 spring.main.allow-bean-definition-overriding=true
+
+# Force disable any platform-level CORS
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.http-only=false
+server.servlet.session.cookie.same-site=none
+
+# Additional headers to override Railway
+server.servlet.session.cookie.domain=
+server.servlet.session.cookie.path=/
