--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -76,8 +76,9 @@ spring.web.cors.allowed-origins=
 spring.web.cors.allowed-methods=
 spring.web.cors.allowed-headers=
 
-# Allow bean overriding to prevent conflicts
+# NUCLEAR: Allow bean overriding to prevent conflicts
 spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
 
 # Force disable any platform-level CORS
 server.servlet.session.cookie.secure=false
