fix | working before this one

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -76,6 +76,9 @@ spring.web.cors.allowed-origins=
 spring.web.cors.allowed-methods=
 spring.web.cors.allowed-headers=
 
+# Disable Spring Security CORS completely
+spring.security.web.cors.enabled=false
+
 # NUCLEAR: Allow bean overriding to prevent conflicts
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
