fix | working before this one 2

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -61,33 +61,13 @@ management.endpoint.health.show-details=when-authorized
 # Frontend URL Configuration
 app.frontend.url=https://agriculture-frontend-two.vercel.app
 
-# NUCLEAR CORS OVERRIDE - Force disable Railway's automatic CORS
-server.servlet.session.cookie.secure=false
-server.servlet.session.cookie.same-site=none
-server.forward-headers-strategy=none
+# CORS Configuration
+spring.web.cors.enabled=true
 
-# Force override Railway's platform CORS
+# Server Configuration
 server.servlet.context-path=/api
 server.port=9090
 
-# NUCLEAR: Completely disable Spring's CORS handling
-spring.web.cors.enabled=false
-spring.web.cors.allowed-origins=
-spring.web.cors.allowed-methods=
-spring.web.cors.allowed-headers=
-
-# Disable Spring Security CORS completely
-spring.security.web.cors.enabled=false
-
-# NUCLEAR: Allow bean overriding to prevent conflicts
-spring.main.allow-bean-definition-overriding=true
-spring.main.allow-circular-references=true
-
-# Force disable any platform-level CORS
+# Session Configuration
 server.servlet.session.cookie.secure=false
-server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.same-site=none
-
-# Additional headers to override Railway
-server.servlet.session.cookie.domain=
-server.servlet.session.cookie.path=/
