fix | working before this one 23456

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -63,6 +63,11 @@ app.frontend.url=https://agriculture-frontend-two.vercel.app
 
 # CORS Configuration
 spring.web.cors.enabled=true
+spring.web.cors.allowed-origins=https://agriculture-frontend-two.vercel.app,https://agriculture-frontend.vercel.app,https://agriculture-frontend-btleirx65.vercel.app,http://localhost:3000,http://127.0.0.1:3000
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH,HEAD
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
 
 # Server Configuration
 server.servlet.context-path=/api
