one before is deployed on google

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -34,18 +34,20 @@ logging.level.com.hackathon.agriculture_backend=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=WARN
 
-# Email Configuration - Completely disable email in production to prevent SMTP timeouts
-spring.mail.host=
-spring.mail.port=
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.properties.mail.smtp.starttls.required=false
-app.email.enabled=false
+# Email Configuration - Enable email in production
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SMTP_USERNAME:killiyaezov@gmail.com}
+spring.mail.password=${SMTP_PASSWORD:wmyahtxvziwqsdly}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+app.email.enabled=true
+app.email.from=${SMTP_USERNAME:killiyaezov@gmail.com}
 
-# Health Configuration - Completely disable mail health indicator
-management.health.mail.enabled=false
+# Health Configuration - Enable mail health indicator
+management.health.mail.enabled=true
 management.health.defaults.enabled=true
 management.health.diskspace.enabled=true
 management.health.db.enabled=true
