fixed some error - one before this is perfectly working 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -83,7 +83,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 # Application Email Configuration
 app.email.from=killiyaezov@gmail.com
 app.email.enabled=true
-app.frontend.url=http://localhost:3000
+app.frontend.url=https://agriculture-frontend-two.vercel.app
 app.token.email-confirmation.expiry=24
 app.token.password-reset.expiry=1
 
