fixed some error - one before this is working

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -46,8 +46,8 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 app.email.enabled=true
 app.email.from=${SMTP_USERNAME:killiyaezov@gmail.com}
 
-# Health Configuration - Enable mail health indicator
-management.health.mail.enabled=true
+# Health Configuration - Disable mail health indicator to prevent SMTP timeouts
+management.health.mail.enabled=false
 management.health.defaults.enabled=true
 management.health.diskspace.enabled=true
 management.health.db.enabled=true
