--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,7 @@ spring.jackson.time-zone=UTC
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+management.health.mail.enabled=false
 
 # Google OAuth2 Configuration (only if credentials are provided)
 # OAuth2 auto-configuration is disabled by default to prevent startup issues
