fixed some error - one before this is working well 1

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -78,3 +78,8 @@ server.port=9090
 # Session Configuration
 server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.same-site=none
+
+# Plant.id API Configuration
+plantid.api-keys=${PLANTID_API_KEYS:k081ANqnIHItmqlh58hu0WXqPNtDD6jkEbkm3AcRBDQ2LAxe2Y}
+plantid.endpoint=https://api.plant.id/v3/health_assessment
+plantid.timeout=30000
