--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -43,6 +43,14 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.ssl.checkserveridentity=true
+spring.mail.properties.mail.smtp.ssl.required=false
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.debug=false
 app.email.enabled=true
 app.email.from=${SMTP_USERNAME:killiyaezov@gmail.com}
 
@@ -83,3 +91,9 @@ server.servlet.session.cookie.same-site=none
 plantid.api-keys=${PLANTID_API_KEYS:k081ANqnIHItmqlh58hu0WXqPNtDD6jkEbkm3AcRBDQ2LAxe2Y}
 plantid.endpoint=https://api.plant.id/v3/health_assessment
 plantid.timeout=30000
+
+# OAuth2 Configuration for Production
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=https://agriculture-backend-1077945709935.europe-west1.run.app/login/oauth2/code/google
