fixed some error | mobile ui changed - one before this worked perfectly

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -43,6 +43,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# Enable email functionality
+app.email.enabled=true
+management.health.mail.enabled=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
@@ -96,4 +100,4 @@ plantid.timeout=30000
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=https://agriculture-backend-1077945709935.europe-west1.run.app/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://agriculture-backend-1077945709935.europe-west1.run.app/api/login/oauth2/code/google
