fixed some error | mobile ui changed - one before this worked perfectly 1

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -35,18 +35,14 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=WARN
 
 # Email Configuration - Enable email in production
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${SMTP_USERNAME:killiyaezov@gmail.com}
-spring.mail.password=${SMTP_PASSWORD:wmyahtxvziwqsdly}
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:killiyaezov@gmail.com}
+spring.mail.password=${MAIL_PASSWORD:wmyahtxvziwqsdly}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-
-# Enable email functionality
-app.email.enabled=true
-management.health.mail.enabled=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
@@ -55,8 +51,10 @@ spring.mail.properties.mail.smtp.ssl.checkserveridentity=true
 spring.mail.properties.mail.smtp.ssl.required=false
 spring.mail.properties.mail.smtp.ssl.enable=false
 spring.mail.properties.mail.debug=false
+
+# Enable email functionality
 app.email.enabled=true
-app.email.from=${SMTP_USERNAME:killiyaezov@gmail.com}
+app.email.from=${MAIL_USERNAME:killiyaezov@gmail.com}
 
 # Health Configuration - Disable mail health indicator to prevent SMTP timeouts
 management.health.mail.enabled=false
